--- a/css/main.scss
+++ b/css/main.scss
@@ -23,10 +23,10 @@ body {
                 border-radius: 4px 0 0 4px !important;
                 order: 1;
                 h1 {
-                    text-align: left;
+                    text-align: left !important;
                 }
                 .main-paragraph {
-                    text-align: left;
+                    text-align: left !important;
                 }
                 .spans-container {
                     display: flex;
@@ -62,11 +62,13 @@ body {
                 font-weight: 700;
                 font-family: 'Inter';
                 margin-bottom: 20px;
+                text-align: center;
                 span {
                     color: hsl(277, 64%, 61%);
                 }
             }
             .main-paragraph {
+                text-align: center;
                 font-size: 12px;
                 font-family: 'Inter';
                 font-weight: 400;
