--- a/css/main.scss
+++ b/css/main.scss
@@ -65,6 +65,7 @@ body {
                 text-align: center;
                 span {
                     color: hsl(277, 64%, 61%);
+                    text-align: center;
                 }
             }
             .main-paragraph {
